# models/books.js
@@ -1,0 +1,14 @@
+
+const books={
+id:0,
+title:	"",
+authorname:	"",
+description:	"",
+isbn:	0,
+edition:	"",
+genre:	[],
+num_of_pages:	0,
+date:	""
+}
+
+module.exports=books;
